# mcomm

./: .clang_complete  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  bootstrap.sh  compile.sh  output  premake4.lua  premake5.lua  runtests.sh
res/: level1.json  start_entities.xml
scripts/: bind_python.mako  codegen.py  codegen2.py  cppheader.peg  dump_ast.py
src/: game.cc  game.h  macros.h  main.cc  precompiled.h
src/bindings/: bindings.cc  bindings.h  external_types.h
src/gui/: editor.cc  editor.h
src/media/: animationframe.cc  animationframe.h  texturemanager.cc  texturemanager.h
src/reflection/: metaclass.h  metaclassmanager.h  metaobject.h  metaobjectmanager.h  typeids.h
src/scripting/: scriptmanager.h
src/simulation/: collisiongrid.cc  collisiongrid.h  collisiontype.h  component.cc  component.h  entity.cc  entity.h  factories.cc  factories.h  system.h  tags  world.cc  world.h
src/simulation/components/: animationframescomponent.cc  animationframescomponent.h  b2dcomponent.cc  b2dcomponent.h  boundingboxcomponent.cc  boundingboxcomponent.h  drawable.h  drawablecomponent.cc  drawablecomponent.h  fontcomponent.cc  fontcomponent.h  selectablecomponent.cc  selectablecomponent.h  speedcomponent.cc  speedcomponent.h  spritecomponent.cc  spritecomponent.h  tags  textcomponent.cc  textcomponent.h  transformcomponent.cc  transformcomponent.h
src/simulation/systems/: collidingsystem.cc  collidingsystem.h  keyboardinputsystem.cc  keyboardinputsystem.h  renderablesystem.cc  renderablesystem.h  (+8 more)
src/util/: bind_meta.h  constexpr_crc.h
test/: testmain.cc
(+3 files in other folders)
